--- a/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
+++ b/custom-addons/hr_salary_increment/views/hr_salary_increment_view.xml
@@ -1,72 +1,85 @@
 <odoo>
-    <!-- Action for Salary Increment -->
-    <record id="hr_salary_increment_action" model="ir.actions.act_window">
-        <field name="name">Salary Increment</field>
-        <field name="res_model">hr.salary.increment</field>
+
+    <!-- Action for Batch Increment -->
+    <record id="action_hr_salary_increment_batch" model="ir.actions.act_window">
+        <field name="name">Salary Increment Batches</field>
+        <field name="res_model">hr.salary.increment.batch</field>
         <field name="view_mode">tree,form</field>
     </record>
 
-    <!-- Tree View for Salary Increment -->
-    <record id="hr_salary_increment_view_tree" model="ir.ui.view">
-        <field name="name">hr.salary.increment.tree</field>
-        <field name="model">hr.salary.increment</field>
+    <!-- Tree View for Batch -->
+    <record id="view_hr_salary_increment_batch_tree" model="ir.ui.view">
+        <field name="name">hr.salary.increment.batch.tree</field>
+        <field name="model">hr.salary.increment.batch</field>
         <field name="arch" type="xml">
-            <tree string="Salary Increment">
-                <field name="employee_id" />
-                <field name="pay_grade_id" />
-                <field name="current_wage" />
-                <field name="suggested_increment_level_id" />
-                <field name="next_increment_level_id" />
-                <field name="new_wage" />
-                <field name="average_score" />
+            <tree string="Salary Increment Batches">
+                <field name="name" />
+                <field name="start_date" />
+                <field name="end_date" />
                 <field name="state" />
             </tree>
         </field>
     </record>
 
-    <!-- Form View for Salary Increment -->
-    <record id="view_hr_salary_increment_form" model="ir.ui.view">
-        <field name="name">hr.salary.increment.form</field>
-        <field name="model">hr.salary.increment</field>
+    <!-- Form View for Batch -->
+    <record id="view_hr_salary_increment_batch_form" model="ir.ui.view">
+        <field name="name">hr.salary.increment.batch.form</field>
+        <field name="model">hr.salary.increment.batch</field>
         <field name="arch" type="xml">
-            <form string="Salary Increment">
+            <form string="Salary Increment Batch">
                 <header>
-                    <button name="action_submit" type="object" string="Submit Request"
-                        class="btn-primary" states="draft" />
-                    <button name="action_approve" type="object" string="Approve"
-                        class="btn-success" states="submitted" />
-                    <button name="action_reject" type="object" string="Reject"
-                        class="btn-danger" states="submitted" />
+                    <button name="action_populate_batch" type="object" string="Filter Employees"
+                        class="btn-primary"
+                        attrs="{'invisible': [('show_filter_button', '=', True)]}"
+                        groups="hr_salary_increment.group_hr_officer" />
+                    <button name="action_submit" type="object" string="Submit" class="btn-primary"
+                        states="draft" groups="hr_salary_increment.group_hr_officer" />
+                    <button name="action_approve" type="object" string="Approve" class="btn-success"
+                        states="submitted" groups="hr_salary_increment.group_hr_director" />
+                    <button name="action_reject" type="object" string="Reject" class="btn-danger"
+                        states="submitted" groups="hr_salary_increment.group_hr_director" />
                     <field name="state" widget="statusbar"
                         statusbar_visible="draft,submitted,approved,rejected" />
                 </header>
                 <sheet>
-                    <group col="2">
-                        <!-- Employee and Contract Information -->
+                    <group col="3">
                         <group>
-                            <field name="employee_id" required="1" />
-                            <field name="contract_id" readonly="1" />
-                            <field name="pay_grade_id" readonly="1" />
-                            <field name="current_wage" readonly="1" />
-                            <field name="current_increment_level_id" readonly="1" />
+                            <field name="name" />
+                            <field name="show_filter_button" invisible="1" />
                         </group>
-                        <!-- Increment Details -->
                         <group>
-                            <field name="suggested_increment_level_id" readonly="1"
-                                string="Suggested Increment Level" />
-                            <field name="next_increment_level_id" required="1"
-                                string="Final Increment Level" />
-                            <field name="new_wage" readonly="1" />
-                            <field name="average_score" readonly="1" />
-                            <field name="is_eligible" readonly="1" />
+                            <field name="start_date"
+                                attrs="{'readonly': [('state', '!=', 'draft')]}" />
+                        </group>
+                        <group>
+                            <field name="end_date" attrs="{'readonly': [('state', '!=', 'draft')]}" />
                         </group>
                     </group>
+                    <notebook>
+                        <page string="Increment Lines">
+                            <field name="increment_line_ids">
+                                <tree editable="bottom">
+                                    <field name="employee_id" />
+                                    <field name="current_increment_level_id" />
+                                    <field name="current_is_base" widget="boolean_toggle" />
+                                    <field name="average_performance_score" />
+                                    <field name="ceiling_reached" widget="boolean_toggle" />
+                                    <field name="current_wage" />
+                                    <field name="steps" />
+                                    <field name="next_increment_is_ceiling" widget="boolean_toggle" />
+                                    <field name="next_increment_level_id" />
+                                    <field name="new_wage" />
+                                    <field name="is_eligible" widget="boolean_toggle" />
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                     <group>
-                        <field name="remarks" widget="text"
-                            placeholder="Add remarks or notes here..." />
+                        <field name="remarks" widget="text" />
                     </group>
                 </sheet>
             </form>
         </field>
     </record>
+
 </odoo>
