--- a/custom-addons/hr_retirement/views/extension_request_views.xml
+++ b/custom-addons/hr_retirement/views/extension_request_views.xml
@@ -41,7 +41,7 @@
                                 type="object" 
                                 class="oe_highlight" 
                                 attrs="{'invisible':['|',('state','!=','submitted'),('user_can_comment','=',False)]}"
-                                confirm="Are you sure you want to Accept this Offer?"
+                                confirm="Are you sure you want to Reject this Offer?"
                         />
                         <field name="state" 
                                widget="statusbar" 
@@ -63,7 +63,7 @@
                             <field name="employee_id" attrs="{'readonly':[('state','!=','draft')]}"  options="{'no_create': True, 'no_open': True}}"/>
                             <field name="employee_department" readonly="1" />
                             <field name="current_retirement_date" readonly="1"/>
-                            <field name="proposed_new_retirement_date" readonly="1"/>
+                            <field name="proposed_new_retirement_date" readonly="1" attrs="{'invisible':[('state','in',['approved','rejected'])]}"/>
                             <field name="extension_period_months" required="1"/>
                             <field name="extension_reason" required="1" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="request_date" readonly="1"/>
