--- a/custom-addons/hr_pay_grade/views/hr_pay_grade_view.xml
+++ b/custom-addons/hr_pay_grade/views/hr_pay_grade_view.xml
@@ -75,7 +75,7 @@
                 <!-- Increment Level Field -->
                 <field name="increment_level_id" string="Increment Level"
                     domain="[('pay_grade_id', '=', pay_grade_id)]"
-                    attrs="{'invisible': [('is_base_or_ceil', '=', True)]}" />
+                    attrs="{'invisible': ['|', ('is_base', '=', True), ('is_ceiling', '=', True)]}" />
                 <field name="is_base_or_ceil" invisible="1" />
             </field>
         </field>
