--- a/custom-addons/hr_bonus_managment/views/hr_bonus_managment_view.xml
+++ b/custom-addons/hr_bonus_managment/views/hr_bonus_managment_view.xml
@@ -27,10 +27,25 @@
         <field name="name">hr_bonus_managment.view.form</field>
         <field name="model">hr.bonus.managment</field>
         <field name="arch" type="xml">
-            <form string="">
+            <form string="Bonus Managment batch line">
+                <header>
+                    <button name="action_populate_batch" type="object" string="Filter Employees"
+                        class="btn-primary"
+                        attrs="{'invisible': [('show_filter_button', '=', True)]}"
+                    />
+                    <button name="action_submit" type="object" string="Submit" class="btn-primary"
+                        states="draft" />
+                    <button name="action_approve" type="object" string="Approve" class="btn-success"
+                        states="submitted" />
+                    <button name="action_reject" type="object" string="Reject" class="btn-danger"
+                        states="submitted" />
+                    <field name="state" widget="statusbar"
+                        statusbar_visible="draft,submitted,approved,rejected" />
+                </header>
                 <sheet>
                     <group col="3">
                         <group>
+                            <field name="show_filter_button" invisible="1" />
                             <field name="name" />
                         </group>
                         <group>
@@ -45,8 +60,9 @@
                             <field name="bonus_managment_line">
                                 <tree editable="bottom">
                                     <field name="employee_id" />
-                                    <field name="is_eligible" widget="boolean_toggle" />
+                                    <field name="current_wage" />
                                     <field name="bonus_amount" />
+                                    <field name="is_eligible" widget="boolean_toggle" />
                                 </tree>
                             </field>
                         </page>
