--- a/custom-addons/hr_bonus_managment/views/hr_bonus_managment_view.xml
+++ b/custom-addons/hr_bonus_managment/views/hr_bonus_managment_view.xml
@@ -35,12 +35,15 @@
                     />
                     <button name="action_submit" type="object" string="Submit" class="btn-primary"
                         states="draft"
+                        groups="hr_bonus_managment.group_work_unit_manager,base.group_system"
                         confirm="Are you sure you want to process this? Plaese double check it" />
                     <button name="action_approve" type="object" string="Approve" class="btn-success"
                         states="submitted"
+                        groups="hr_bonus_managment.group_hr_officer,base.group_system"
                         confirm="Are you sure you want to process this? Plaese double check it" />
                     <button name="action_reject" type="object" string="Reject" class="btn-danger"
                         states="submitted"
+                        groups="hr_bonus_managment.group_hr_officer,base.group_system"
                     />
                     <field name="state" widget="statusbar"
                         statusbar_visible="draft,submitted,approved,rejected" />
@@ -64,10 +67,11 @@
                         </group>
                     </group>
                     <notebook>
-                        <page string="Bonus Mnagment Line">
+                        <page string="Bonus Managment Line">
                             <field name="bonus_managment_line">
                                 <tree editable="bottom">
                                     <field name="employee_id" />
+                                    <field name="employee_department" />
                                     <field name="current_wage" />
                                     <field name="performance" />
                                     <field name="bonus_amount" />
