--- a/custom-addons/hr_overtime_payment/views/hr_overtime_type_view.xml
+++ b/custom-addons/hr_overtime_payment/views/hr_overtime_type_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record id="hr_overtime_type_action" model="ir.actions.act_window">
+        <field name="name">Overtime Rate Type</field>
         <field name="res_model">hr.overtime.rate</field>
         <field name="view_mode">tree,form</field>
     </record>
@@ -13,11 +14,18 @@
         <field name="arch" type="xml">
             <form string="Overtime Rate Types">
                 <sheet>
-                    <group>
-                        <field name="name" />
-                        <field name="hourly_rate" />
+                    <group col="2">
+                        <group>
+                            <field name="name" />
+                        </group>
+                        <group>
+                            <field name="hourly_rate" />
+                        </group>
                     </group>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_ids" widget="mail_thread" />
+                </div>
             </form>
         </field>
     </record>
