--- a/custom-addons/hr_overtime_payment/views/hr_employee_view.xml
+++ b/custom-addons/hr_overtime_payment/views/hr_employee_view.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="view_employee_form" model="ir.ui.view">
         <field name="name">
-            hr.employee.view.form.inherit.overtime.payment.history
+            hr.employee.view.form.inherit.hr.overtime.payment.history
         </field>
         <field name="model">hr.employee</field>
         <field name="inherit_id" ref="hr.view_employee_form" />
